# framebuffer-vnc-server

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: framebuffer-vnc-server.c  framebuffer-vncserver.c
